--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "database:generate": "prisma generate",
     "database:migrate": "prisma migrate dev",
     "database:reset": "prisma migrate reset",
+    "database:studio": "prisma studio",
     "dev": "tsx ./server/serve.ts",
     "format:fix": "prettier --write .",
     "format:check": "prettier --check .",
@@ -24,6 +25,7 @@
     "@remix-run/express": "^2.13.1",
     "@remix-run/node": "^2.13.1",
     "@remix-run/react": "^2.13.1",
+    "argon2": "^0.41.1",
     "compression": "^1.7.5",
     "cross-env": "^7.0.3",
     "express": "^4.21.1",
@@ -31,7 +33,8 @@
     "mime": "^4.0.4",
     "morgan": "^1.10.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
